--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="index.js"></script>
     <script src="jQuery.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="index.js"></script>
+    <script src="axiosClient.js"></script>
+
 </head>
 <body>
 <span>welcome to easyctl</span><br><br><br>
-<form>
-    <div name="loginReq">
+<div name="loginReq">
     First name: <label><input type="text" id="loginAccount"></label><br><br>
     Last name: <label><input type="text" id="password"></label><br><br>
-    </div>
-    <input type="submit" onclick="userLogin()" value="提交">
-</form>
+</div>
+<div id="errMsg"></div>
+<input type="submit" onclick="userLogin()" value="提交">
 </body>
 </html>
