--- a/src/main/resources/static/terminalControl.html
+++ b/src/main/resources/static/terminalControl.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="jQuery.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="terminalControl.js"></script>
+    <script src="axiosClient.js"></script>
 </head>
 <body>
 <span>welcome to easyctl</span><br><br><br>
-<form action="http://localhost:8080/terminal/control" method="post">
-    <div class="loginReq">
-        First name: <label><input type="text" class="targetTopic"></label><br><br>
-        Last name: <label><input type="text" class="api"></label><br><br>
-        Last name: <label><input type="text" class="params"></label><br><br>
-    </div>
-
-    <input type="submit" value="执行">
-</form>
+<div id="topicList">
+</div>
+<input type="submit" value="执行">
 </body>
 </html>
